fix build error

--- a/WebApi/Orchard-1.10.1/src/Orchard.Web/Modules/Datwendo.Localization/Datwendo.Localization.csproj
+++ b/WebApi/Orchard-1.10.1/src/Orchard.Web/Modules/Datwendo.Localization/Datwendo.Localization.csproj
@@ -147,6 +147,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="lib\Ionic.Zip.dll" />
     <Content Include="Module.txt" />
   </ItemGroup>
   <ItemGroup>
