--- a/WebApi/Orchard-1.10.1/src/Orchard.Web/Modules/dcp.Routing/dcp.Routing.csproj
+++ b/WebApi/Orchard-1.10.1/src/Orchard.Web/Modules/dcp.Routing/dcp.Routing.csproj
@@ -130,6 +130,9 @@
     <Content Include="Assets.json" />
     <Content Include="Assets\Styles.less" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
+    <Content Include="lib\ExpressiveAnnotations.dll" />
+    <Content Include="lib\ExpressiveAnnotations.MvcUnobtrusive.dll" />
+    <Content Include="lib\Orchard.Alias.dll" />
     <Content Include="Scripts\expressive.annotations.validate.js" />
     <Content Include="Scripts\expressive.annotations.validate.min.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
